--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@ body {
   gap: 1rem;
 }
 
-form {
+#weather-list {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 1rem;
 }
 
 .weather {
