--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ body {
   gap: 1rem;
 }
 
-#weather-list {
+#locations {
   display: flex;
   flex-direction: row;
   gap: 1rem;
 }
 
-.weather {
+.location {
   display: flex;
   flex-direction: column;
   align-items: center;
